# rust-app-template

./: .gitignore  Cargo.toml  LICENSE.md  README.md  build.sh  package-lock.json  package.json  tailwind.config.js
.github/workflows/: general.yml
src/: main.rs  template.rs
static/: htmx.min.js
templates/: base.html  index.html
