[package]
name = "app-template"
version = "0.1.0"
edition = "2021"

[dependencies]
askama =  "0.11.1"
axum = "0.5.6"
axum-extra = { version = "0.3.3", features = ["spa"] }
hyper = { version = "0.14.19", features = ["full"] }
# reqwest = { version = "0.11.10", features = ["json"] }
# serde = { version = "1.0.137", features = ["derive"] }
# serde_json = "1.0.81"
tokio = { version = "1.18.2", features = ["full"] }
tower = "0.4.12"
tower-http = { version = "0.3.3", features = ["full"] }
