[package]
name = "app-template"
version = "0.1.0"
edition = "2021"

[dependencies]
askama =  "0.12.0"
axum = "0.6.16"
hyper = { version = "0.14.26", features = ["full"] }
# reqwest = { version = "0.11.16", features = ["json"] }
# serde = { version = "1.0.160", features = ["derive"] }
# serde_json = "1.0.96"
tokio = { version = "1.27.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
